# sipserver

./: .gitignore  Exported-2024-06-10.vssettings  ForumWebHost.deps.json  ForumWebHost.runtimeconfig.json  ForumWebHost.staticwebassets.runtime.json  Freeswitch.2017.sln  Freeswitch.2022.sln  README.md  cluecon2.tmpl  configure.ac
Backup/SIPServer/: Engine.csproj
SIPServer/: Program.cs  SIPServer.csproj  SIPServerEmbedded.csproj
SIPServer-Installer/: .gitignore  Product.wxs  SIPServer_Installer.wixproj  Strings.wxl  WixUI_InstallDir_WithIP.wxs
SIPServer-Installer/InstallUtils/: .gitignore  GerrAudiobpl.rtf  InstallService.bat  RenBackup.bat  SetAdmin.cpp  SetIP.bat  SvcQuery.bat  SvcStart.bat  SvcStop.bat  dismFeatures.txt  readme.txt
SIPServer/Communication/: APICommands.cs  SIPServerCommands.cs
SIPServer/Configuration/: Modules.cs
SIPServer/Events/: Converter.cs  Handler.cs  Sender.cs
SIPServer/Loaders/: SIPEngine.cs
SIPServer/Logging/: LogEngine.cs  LogLevelConversion.cs
SIPServer/Providers/: CIDR.cs
SIPWebServer/: Program.cs  SIPWebServer.csproj  appsettings.json
SIPWebServer/Components/: App.razor  Routes.razor  _Imports.razor
SIPWebServer/Data/: ApplicationDbContext.cs  ApplicationUser.cs
debian/: bootstrap.sh
libs/esl/: fs_cli.2017.vcxproj  (+1 more)
mod/: mod_managed.dll.metagen
src/: switch.c  switch_console.c  switch_core.c
src/mod/endpoints/mod_aes67/: Makefile.am  README.md  aes67_api.c  aes67_api.h  mod_aes67.c  mod_aes67.vcxproj  pcap_wrap.c  pcap_wrap.h  ptp.c  ptp.h
src/mod/endpoints/mod_aes67/conf/autoload_configs/: aes67.conf.xml
(+125 files in other folders)
